objects/Contract_Parts__c.object
<CustomObject>
    <description>custom object for parts that are related to customer contracts</description>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <referenceTo>IND_Contract__c</referenceTo>
        <relationshipLabel>Contract Parts</relationshipLabel>
        <relationshipName>Contract_Parts_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Number__c</fullName>
        <label>Customer Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Part_Number__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Name__c</fullName>
        <formula>Part_Number__r.GPL_DESC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <formula>Part_Number__r.Product_Hierarchy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <formula>Part_Number__r.Material_Type_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number_Text__c</fullName>
        <description>this field stores the part number name. It is necessary to make the part number appear in the global search in the category IND Contract, filled by WF</description>
        <label>Part Number Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Part__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Contract Parts</relationshipLabel>
        <relationshipName>Contract_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code_Name__c</fullName>
        <formula>Part_Number__r.PROD_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Part_Number__r.PRODUCT_CDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Contract Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP {000000}</displayFormat>
        <label>Contract Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>